src/parser_backup/viewsql_parser.go
// Code generated from ViewSQL.g4 by ANTLR 4.12.0. DO NOT EDIT.

package parser // ViewSQL
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ViewSQLParser struct {
	*antlr.BaseParser
}

var viewsqlParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func viewsqlParserInit() {
	staticData := &viewsqlParserStaticData
	staticData.literalNames = []string{
		"", "'+'", "'-'", "'*'", "'/'", "'SUM'", "'AVG'", "'MAX'", "'MIN'",
		"'COUNT'", "'AND'", "'ASC'", "'DESC'", "'='", "'>'", "'>='", "'<'",
		"'<='", "'!='", "'.'", "','", "':'", "'('", "')'", "'['", "']'", "'\"'",
		"'{'", "'}'", "'AS'", "'CREATE'", "'VIEW'", "'SELECT'", "'FROM'", "'WHERE'",
		"'GROUP'", "'BY'", "'ORDER'", "'LIMIT'", "'WITH'", "'IN'", "'PRIMARY'",
		"'KEY'", "'TABLE'", "'INDEX'", "'UPDATE'", "'DELETE'", "'INSERT'", "'INTO'",
		"'DROP'", "'SET'", "'FOREIGN'", "'REFERENCES'", "'VALUES'", "'CHECK'",
		"'ON'", "'AW'", "'RW'", "'LWW'", "'DEFAULT'", "'integer'", "'counter'",
		"'boolean'", "'varchar'", "'date'",
	}
	staticData.symbolicNames = []string{
		"", "ADD", "SUB", "MULT", "DIV", "SUM", "AVG", "MAX", "MIN", "COUNT",
		"AND", "ASC", "DESC", "EQUAL", "HIGHER", "HIGHER_EQUAL", "LOWER", "LOWER_EQUAL",
		"NOT_EQUAL", "DOT", "SEPARATOR", "RANGE_SEP", "LEFT_P", "RIGHT_P", "LEFT_SP",
		"RIGHT_SP", "INV_COMMA", "LEFT_CURLY", "RIGHT_CURLY", "AS", "CREATE",
		"VIEW", "SELECT", "FROM", "WHERE", "GROUP", "BY", "ORDER", "LIMIT",
		"WITH", "IN", "PRIMARY", "KEY", "TABLE", "INDEX", "UPDATE", "DELETE",
		"INSERT", "INTO", "DROP", "SET", "FOREIGN", "REFERENCES", "VALUES",
		"CHECK", "ON", "AW", "RW", "LWW", "DEFAULT", "INTEGER", "COUNTER", "BOOLEAN",
		"VARCHAR", "DATE_TYPE", "DATE", "BOOL", "STRING", "INT", "FLOAT", "WHITESPACE",
	}
	staticData.ruleNames = []string{
		"name", "constant", "aggrFunc", "field", "parameter", "nameable", "key",
		"math", "asClause", "aggregation", "count", "calc", "comp", "condition",
		"sortOrder", "continuousRange", "sparseRange", "range", "create", "with",
		"select", "from", "where", "groupby", "orderby", "limit", "view", "check",
		"foreignkey", "primarykey", "constraint", "columns", "createtable",
		"createindex", "drop", "delete", "set", "update", "values", "columnNames",
		"insert", "query", "statement", "start",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ViewSQLParserInit initializes any static state used to implement ViewSQLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewViewSQLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ViewSQLParserInit() {
	staticData := &viewsqlParserStaticData
	staticData.once.Do(viewsqlParserInit)
}

// NewViewSQLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewViewSQLParser(input antlr.TokenStream) *ViewSQLParser {
	ViewSQLParserInit()
	this := new(ViewSQLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &viewsqlParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "ViewSQL.g4"

	return this
}

// ViewSQLParser tokens.
const (
	ViewSQLParserEOF          = antlr.TokenEOF
	ViewSQLParserADD          = 1
	ViewSQLParserSUB          = 2
	ViewSQLParserMULT         = 3
	ViewSQLParserDIV          = 4
	ViewSQLParserSUM          = 5
	ViewSQLParserAVG          = 6
	ViewSQLParserMAX          = 7
	ViewSQLParserMIN          = 8
	ViewSQLParserCOUNT        = 9
	ViewSQLParserAND          = 10
	ViewSQLParserASC          = 11
	ViewSQLParserDESC         = 12
	ViewSQLParserEQUAL        = 13
	ViewSQLParserHIGHER       = 14
	ViewSQLParserHIGHER_EQUAL = 15
	ViewSQLParserLOWER        = 16
	ViewSQLParserLOWER_EQUAL  = 17
	ViewSQLParserNOT_EQUAL    = 18
	ViewSQLParserDOT          = 19
	ViewSQLParserSEPARATOR    = 20
	ViewSQLParserRANGE_SEP    = 21
	ViewSQLParserLEFT_P       = 22
	ViewSQLParserRIGHT_P      = 23
	ViewSQLParserLEFT_SP      = 24
	ViewSQLParserRIGHT_SP     = 25
	ViewSQLParserINV_COMMA    = 26
	ViewSQLParserLEFT_CURLY   = 27
	ViewSQLParserRIGHT_CURLY  = 28
	ViewSQLParserAS           = 29
	ViewSQLParserCREATE       = 30
	ViewSQLParserVIEW         = 31
	ViewSQLParserSELECT       = 32
	ViewSQLParserFROM         = 33
	ViewSQLParserWHERE        = 34
	ViewSQLParserGROUP        = 35
	ViewSQLParserBY           = 36
	ViewSQLParserORDER        = 37
	ViewSQLParserLIMIT        = 38
	ViewSQLParserWITH         = 39
	ViewSQLParserIN           = 40
	ViewSQLParserPRIMARY      = 41
	ViewSQLParserKEY          = 42
	ViewSQLParserTABLE        = 43
	ViewSQLParserINDEX        = 44
	ViewSQLParserUPDATE       = 45
	ViewSQLParserDELETE       = 46
	ViewSQLParserINSERT       = 47
	ViewSQLParserINTO         = 48
	ViewSQLParserDROP         = 49
	ViewSQLParserSET          = 50
	ViewSQLParserFOREIGN      = 51
	ViewSQLParserREFERENCES   = 52
	ViewSQLParserVALUES       = 53
	ViewSQLParserCHECK        = 54
	ViewSQLParserON           = 55
	ViewSQLParserAW           = 56
	ViewSQLParserRW           = 57
	ViewSQLParserLWW          = 58
	ViewSQLParserDEFAULT      = 59
	ViewSQLParserINTEGER      = 60
	ViewSQLParserCOUNTER      = 61
	ViewSQLParserBOOLEAN      = 62
	ViewSQLParserVARCHAR      = 63
	ViewSQLParserDATE_TYPE    = 64
	ViewSQLParserDATE         = 65
	ViewSQLParserBOOL         = 66
	ViewSQLParserSTRING       = 67
	ViewSQLParserINT          = 68
	ViewSQLParserFLOAT        = 69
	ViewSQLParserWHITESPACE   = 70
)

// ViewSQLParser rules.
const (
	ViewSQLParserRULE_name            = 0
	ViewSQLParserRULE_constant        = 1
	ViewSQLParserRULE_aggrFunc        = 2
	ViewSQLParserRULE_field           = 3
	ViewSQLParserRULE_parameter       = 4
	ViewSQLParserRULE_nameable        = 5
	ViewSQLParserRULE_key             = 6
	ViewSQLParserRULE_math            = 7
	ViewSQLParserRULE_asClause        = 8
	ViewSQLParserRULE_aggregation     = 9
	ViewSQLParserRULE_count           = 10
	ViewSQLParserRULE_calc            = 11
	ViewSQLParserRULE_comp            = 12
	ViewSQLParserRULE_condition       = 13
	ViewSQLParserRULE_sortOrder       = 14
	ViewSQLParserRULE_continuousRange = 15
	ViewSQLParserRULE_sparseRange     = 16
	ViewSQLParserRULE_range           = 17
	ViewSQLParserRULE_create          = 18
	ViewSQLParserRULE_with            = 19
	ViewSQLParserRULE_select          = 20
	ViewSQLParserRULE_from            = 21
	ViewSQLParserRULE_where           = 22
	ViewSQLParserRULE_groupby         = 23
	ViewSQLParserRULE_orderby         = 24
	ViewSQLParserRULE_limit           = 25
	ViewSQLParserRULE_view            = 26
	ViewSQLParserRULE_check           = 27
	ViewSQLParserRULE_foreignkey      = 28
	ViewSQLParserRULE_primarykey      = 29
	ViewSQLParserRULE_constraint      = 30
	ViewSQLParserRULE_columns         = 31
	ViewSQLParserRULE_createtable     = 32
	ViewSQLParserRULE_createindex     = 33
	ViewSQLParserRULE_drop            = 34
	ViewSQLParserRULE_delete          = 35
	ViewSQLParserRULE_set             = 36
	ViewSQLParserRULE_update          = 37
	ViewSQLParserRULE_values          = 38
	ViewSQLParserRULE_columnNames     = 39
	ViewSQLParserRULE_insert          = 40
	ViewSQLParserRULE_query           = 41
	ViewSQLParserRULE_statement       = 42
	ViewSQLParserRULE_start           = 43
)

// INameContext is an interface to support dynamic dispatch.
type INameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	STRING() antlr.TerminalNode

	// IsNameContext differentiates from other interfaces.
	IsNameContext()
}

type NameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNameContext() *NameContext {
	var p = new(NameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ViewSQLParserRULE_name
	return p
}

func (*NameContext) IsNameContext() {}

func NewNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NameContext {
	var p = new(NameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ViewSQLParserRULE_name

	return p
}

func (s *NameContext) GetParser() antlr.Parser { return s.parser }

func (s *NameContext) STRING() antlr.TerminalNode {
	return s.GetToken(ViewSQLParserSTRING, 0)
}

func (s *NameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ViewSQLListener); ok {
		listenerT.EnterName(s)
	}
}

func (s *NameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ViewSQLListener); ok {
		listenerT.ExitName(s)
	}
}

func (p *ViewSQLParser) Name() (localctx INameContext) {
	this := p
	_ = this

	localctx = NewNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ViewSQLParserRULE_name)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(88)
		p.Match(ViewSQLParserSTRING)
	}

	return localctx
}

// IConstantContext is an interface to support dynamic dispatch.
type IConstantContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DATE() antlr.TerminalNode
	BOOL() antlr.TerminalNode
	INT() antlr.TerminalNode
	FLOAT() antlr.TerminalNode
	AllINV_COMMA() []antlr.TerminalNode
	INV_COMMA(i int) antlr.TerminalNode
	AllSTRING() []antlr.TerminalNode
	STRING(i int) antlr.TerminalNode
	AllWHITESPACE() []antlr.TerminalNode
	WHITESPACE(i int) antlr.TerminalNode

	// IsConstantContext differentiates from other interfaces.
	IsConstantContext()
}

type ConstantContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConstantContext() *ConstantContext {
	var p = new(ConstantContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ViewSQLParserRULE_constant
	return p
}

func (*ConstantContext) IsConstantContext() {}

func NewConstantContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConstantContext {
	var p = new(ConstantContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ViewSQLParserRULE_constant

	return p
}

func (s *ConstantContext) GetParser() antlr.Parser { return s.parser }

func (s *ConstantContext) DATE() antlr.TerminalNode {
	return s.GetToken(ViewSQLParserDATE, 0)
}

func (s *ConstantContext) BOOL() antlr.TerminalNode {
	return s.GetToken(ViewSQLParserBOOL, 0)
}

func (s *ConstantContext) INT() antlr.TerminalNode {
	return s.GetToken(ViewSQLParserINT, 0)
}

func (s *ConstantContext) FLOAT() antlr.TerminalNode {
	return s.GetToken(ViewSQLParserFLOAT, 0)
}

func (s *ConstantContext) AllINV_COMMA() []antlr.TerminalNode {
	return s.GetTokens(ViewSQLParserINV_COMMA)
}

func (s *ConstantContext) INV_COMMA(i int) antlr.TerminalNode {
	return s.GetToken(ViewSQLParserINV_COMMA, i)
}

func (s *ConstantContext) AllSTRING() []antlr.TerminalNode {
	return s.GetTokens(ViewSQLParserSTRING)
}

func (s *ConstantContext) STRING(i int) antlr.TerminalNode {
	return s.GetToken(ViewSQLParserSTRING, i)
}

func (s *ConstantContext) AllWHITESPACE() []antlr.TerminalNode {
	return s.GetTokens(ViewSQLParserWHITESPACE)
}

func (s *ConstantContext) WHITESPACE(i int) antlr.TerminalNode {
	return s.GetToken(ViewSQLParserWHITESPACE, i)
}

func (s *ConstantContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConstantContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ConstantContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ViewSQLListener); ok {
		listenerT.EnterConstant(s)
	}
}

func (s *ConstantContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ViewSQLListener); ok {
		listenerT.ExitConstant(s)
	}
}

func (p *ViewSQLParser) Constant() (localctx IConstantContext) {
	this := p
	_ = this

	localctx = NewConstantContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ViewSQLParserRULE_constant)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(103)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case ViewSQLParserDATE:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(90)
			p.Match(ViewSQLParserDATE)
		}

	case ViewSQLParserBOOL:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(91)
			p.Match(ViewSQLParserBOOL)
		}

	case ViewSQLParserINT:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(92)
			p.Match(ViewSQLParserINT)
		}

	case ViewSQLParserFLOAT:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(93)
			p.Match(ViewSQLParserFLOAT)
		}

	case ViewSQLParserINV_COMMA:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(94)
			p.Match(ViewSQLParserINV_COMMA)
		}
		{
			p.SetState(95)
			p.Match(ViewSQLParserSTRING)
		}
		p.SetState(99)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == ViewSQLParserSTRING || _la == ViewSQLParserWHITESPACE {
			{
				p.SetState(96)
				_la = p.GetTokenStream().LA(1)

				if !(_la == ViewSQLParserSTRING || _la == ViewSQLParserWHITESPACE) {
					p.GetErrorHandler().RecoverInline(p)
				} else {
					p.GetErrorHandler().ReportMatch(p)
					p.Consume()
				}
			}

			p.SetState(101)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(102)
			p.Match(ViewSQLParserINV_COMMA)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IAggrFuncContext is an interface to support dynamic dispatch.
type IAggrFuncContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SUM() antlr.TerminalNode
	AVG() antlr.TerminalNode
	MAX() antlr.TerminalNode
	MIN() antlr.TerminalNode

	// IsAggrFuncContext differentiates from other interfaces.
	IsAggrFuncContext()
}

type AggrFuncContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAggrFuncContext() *AggrFuncContext {
	var p = new(AggrFuncContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ViewSQLParserRULE_aggrFunc
	return p
}

func (*AggrFuncContext) IsAggrFuncContext() {}

func NewAggrFuncContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AggrFuncContext {
	var p = new(AggrFuncContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ViewSQLParserRULE_aggrFunc

	return p
}

func (s *AggrFuncContext) GetParser() antlr.Parser { return s.parser }

func (s *AggrFuncContext) SUM() antlr.TerminalNode {
	return s.GetToken(ViewSQLParserSUM, 0)
}

func (s *AggrFuncContext) AVG() antlr.TerminalNode {
	return s.GetToken(ViewSQLParserAVG, 0)
}

func (s *AggrFuncContext) MAX() antlr.TerminalNode {
	return s.GetToken(ViewSQLParserMAX, 0)
}

func (s *AggrFuncContext) MIN() antlr.TerminalNode {
	return s.GetToken(ViewSQLParserMIN, 0)
}

func (s *AggrFuncContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AggrFuncContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AggrFuncContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ViewSQLListener); ok {
		listenerT.EnterAggrFunc(s)
	}
}

func (s *AggrFuncContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ViewSQLListener); ok {
		listenerT.ExitAggrFunc(s)
	}
}

func (p *ViewSQLParser) AggrFunc() (localctx IAggrFuncContext) {
	this := p
	_ = this

	localctx = NewAggrFuncContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ViewSQLParserRULE_aggrFunc)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(105)
		_la = p.GetTokenStream().LA(1)

		if !((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&480) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IFieldContext is an interface to support dynamic dispatch.
type IFieldContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllName() []INameContext
	Name(i int) INameContext
	DOT() antlr.TerminalNode

	// IsFieldContext differentiates from other interfaces.
	IsFieldContext()
}

type FieldContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldContext() *FieldContext {
	var p = new(FieldContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ViewSQLParserRULE_field
	return p
}

func (*FieldContext) IsFieldContext() {}

func NewFieldContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldContext {
	var p = new(FieldContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ViewSQLParserRULE_field

	return p
}

func (s *FieldContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldContext) AllName() []INameContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(INameContext); ok {
			len++
		}
	}

	tst := make([]INameContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(INameContext); ok {
			tst[i] = t.(INameContext)
			i++
		}
	}

	return tst
}

func (s *FieldContext) Name(i int) INameContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INameContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(INameContext)
}

func (s *FieldContext) DOT() antlr.TerminalNode {
	return s.GetToken(ViewSQLParserDOT, 0)
}

func (s *FieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ViewSQLListener); ok {
		listenerT.EnterField(s)
	}
}

func (s *FieldContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ViewSQLListener); ok {
		listenerT.ExitField(s)
	}
}

func (p *ViewSQLParser) Field() (localctx IFieldContext) {
	this := p
	_ = this

	localctx = NewFieldContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ViewSQLParserRULE_field)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(107)
		p.Name()
	}
	{
		p.SetState(108)
		p.Match(ViewSQLParserDOT)
	}
	{
		p.SetState(109)
		p.Name()
	}

	return localctx
}

// IParameterContext is an interface to support dynamic dispatch.
type IParameterContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	LEFT_SP() antlr.TerminalNode
	Name() INameContext
	RIGHT_SP() antlr.TerminalNode

	// IsParameterContext differentiates from other interfaces.
	IsParameterContext()
}

type ParameterContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParameterContext() *ParameterContext {
	var p = new(ParameterContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = ViewSQLParserRULE_parameter
	return p
}

func (*ParameterContext) IsParameterContext() {}

func NewParameterContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParameterContext {
	var p = new(ParameterContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = ViewSQLParserRULE_parameter

	return p
}

func (s *ParameterContext) GetParser() antlr.Parser { return s.parser }

func (s *ParameterContext) LEFT_SP() antlr.TerminalNode {
	return s.GetToken(ViewSQLParserLEFT_SP, 0)
}

func (s *ParameterContext) Name() INameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INameContext)
}
